  on the level. Additionally, dragons are counted as having hands for the
  purposes of using defensive and utility items.
- Monsters now use a much wider array of items. This includes wands of wishing.
- Transforming into a lycanthrope now angers guards.
- Runeswords and tsurugis can be randomly generated, but they are incredibly
  rare.
- Just like SLASH'EM, baby dragons can be generated.
- Vampire mages un-deferred.
- If preferred pet is set to '@', the player spawns with an adventuring party.
  This is very experimental, and probably should not be used.
- Some of the less powerful or less unique quest nemeses have been changed to
  be more challenging or interesting (see below).
- Bribing demon lords has been greatly expanded. They now can potentially ask
  for powerful items in your inventory instead of gold, and you can also use
  decks of cards to gamble on your immortal soul with them. Challenging them
  with a deck of fate is a Bad Idea.
- All demon lords have had their AC significantly lowered.
- The wailing of the banshee message was changed slightly to account for the
  addition of wailing banshees.
- The addition of so many artifacts changes things. On one hand, the player is
  more likely to find artifacts throughout the dungeon, due to many new artifact
  types. On the other hand, adding artifacts made the Astral Plane slightly more
  difficult, since player monsters now have a greater number of artifacts to
  be generated with.
- Summon nasties has been expanded to accommodate new monsters.
- New demon lords!
- High level adventurers will arise as spectres in their bones files, a more
  powerful type of ghost which is capable of using weapons. Inspired by an
  archived YANI by AmyBSOD and aosdict.
- Additional achievements are tracked in the xlogfile that pertain to this
  variant.

Quest Nemesis Changes
- Lord Surtur can create level-shaking earthquakes when he attacks.
- Nalzok now has a much higher chance of summoning other demons on hit than